k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  labels:
    app.kubernetes.io/part-of: devops-microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: devops.local
      http:
        paths:
          #Backend API routes
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
          # Prometheus metrics endpoint
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
          # Frontend (catch-all)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
